--- a/mxnet/gpu/Dockerfile
+++ b/mxnet/gpu/Dockerfile
@@ -1,4 +1,4 @@
-FROM wangjianyong/jupyter-cuda:v1
+FROM wangjianyong/jupyter-cuda:7.5
 MAINTAINER Jianyong Wang <wangjianyongscu@gmail.com>
 ENV REFRESHED_AT 2016-05-05
 
