--- a/mxnet/gpu/Dockerfile
+++ b/mxnet/gpu/Dockerfile
@@ -19,6 +19,8 @@ ENV LD_LIBRARY_PATH /usr/local/cuda/lib64:$LD_LIBRARY_PATH
 # python pakcage
 # graphviz ensures the visualization of mx.viz.plot_network in ipython notebook
 RUN apt-get install -y python-numpy wget unzip graphviz
-RUN cd ~/mxnet/python && python setup.py install
-
+# RUN cd ~/mxnet/python && python setup.py install
+ENV PYTHONPATH /mxnet/python
 RUN pip install graphviz
+RUN pip uninstall scikit-image
+RUN pip install -U scikit-image
