--- a/mxnet/gpu/Dockerfile
+++ b/mxnet/gpu/Dockerfile
@@ -2,18 +2,33 @@ FROM wangjianyong/jupyter-cuda:7.5
 MAINTAINER Jianyong Wang <wangjianyongscu@gmail.com>
 ENV REFRESHED_AT 2016-05-05
 
-############# 
+#############
+RUN apt-get update && apt-get install -y \
+  git \
+  libopenblas-dev \
+  libopencv-dev \
+  python-dev \
+  python-numpy \
+  python-setuptools
+ 
 # install the core library
-RUN apt-get update && apt-get install -y build-essential git libopenblas-dev libopencv-dev
-RUN cd ~ && git clone --recursive https://github.com/dmlc/mxnet/ && cd mxnet && \
-    cp make/config.mk . && \
-    echo "USE_CUDA=1" >>config.mk && \
-    echo "USE_CUDA_PATH=/usr/local/cuda" >>config.mk && \
-    echo "USE_CUDNN=1" >>config.mk && \
-    echo "USE_BLAS=openblas" >>config.mk && \
-    make -j8 ADD_LDFLAGS=-L/usr/local/cuda/lib64/stubs && \
-    cd ~
-ENV LD_LIBRARY_PATH /usr/local/cuda/lib64:$LD_LIBRARY_PATH 
+# Clone MXNet repo and move into it
+RUN cd /root && git clone --recursive https://github.com/dmlc/mxnet && cd mxnet && \
+# Copy config.mk
+  cp make/config.mk config.mk && \
+# Set OpenBLAS
+  sed -i 's/USE_BLAS = atlas/USE_BLAS = openblas/g' config.mk && \
+# Set CUDA flag
+  sed -i 's/USE_CUDA = 0/USE_CUDA = 1/g' config.mk && \
+  sed -i 's/USE_CUDA_PATH = NONE/USE_CUDA_PATH = \/usr\/local\/cuda/g' config.mk && \
+# Set cuDNN flag
+# TODO: Change when cuDNN v4 supported
+  sed -i 's/USE_CUDNN = 0/USE_CUDNN = 0/g' config.mk && \
+# Make 
+  make -j"$(nproc)"
+
+# Install Python package
+RUN cd /root/mxnet/python && python setup.py install
 #############
 
 # python pakcage
@@ -22,5 +37,3 @@ RUN apt-get install -y python-numpy wget unzip graphviz
 # RUN cd ~/mxnet/python && python setup.py install
 ENV PYTHONPATH /mxnet/python
 RUN pip install graphviz
-RUN pip uninstall -y scikit-image
-RUN pip install -U scikit-image
