--- a/rl/gpu/Dockerfile
+++ b/rl/gpu/Dockerfile
@@ -2,7 +2,7 @@ FROM wangjianyong/mxnet-cuda:7.5
 MAINTAINER Jianyong Wang <wangjianyongscu@gmail.com>
 ENV REFRESHED_AT 2016-05-28
 
-RUN apt-get install cmake libsdl1.2-dev python-opencv libav-tools
+RUN apt-get install -y cmake libsdl1.2-dev python-opencv libav-tools
 
 RUn git clone https://github.com/mgbellemare/Arcade-Learning-Environment.git && \
 cd Arcade-Learning-Environment && \
