--- a/rl/gpu/Dockerfile
+++ b/rl/gpu/Dockerfile
@@ -2,15 +2,12 @@ FROM wangjianyong/mxnet-cuda:7.5
 MAINTAINER Jianyong Wang <wangjianyongscu@gmail.com>
 ENV REFRESHED_AT 2016-05-28
 RUN apt-get update && apt-get install -y cmake libsdl1.2-dev python-opencv libav-tools
-
+RUN pip install --upgrade pip
 RUn git clone https://github.com/mgbellemare/Arcade-Learning-Environment.git && \
 cd Arcade-Learning-Environment && \
 cmake -DUSE_SDL=ON -DUSE_RLGLUE=OFF -DBUILD_EXAMPLES=ON . && \
-make -j 4 && \
+make -j8 && \
 pip install . && \
 cd
 
 RUN pip install gym gym[atari]
-
-
-
