--- a/jupyter/gpu/Dockerfile
+++ b/jupyter/gpu/Dockerfile
@@ -1,4 +1,5 @@
-FROM nvidia/cuda:7.5-cudnn4-devel
+FROM nvidia/cuda:9.0-cudnn7-devel-ubuntu16.04
+#FROM nvidia/cuda:7.5-cudnn4-devel
 MAINTAINER Jianyong Wang <wangjianyongscu@gmail.com>
 
 ENV REFRESHED_AT 2016-05-05
